--- a/Topic 06 - Ensemble Learning/T4 - Gradient Boost.ipynb
+++ b/Topic 06 - Ensemble Learning/T4 - Gradient Boost.ipynb
@@ -1,14 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "- conda install -c conda-forge lightgbm xgboost catboost"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.datasets import load_wine\n",
+    "from sklearn.model_selection import cross_validate\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#Load data\n",
@@ -39,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score ,recall_score, f1_score\n",
     "\n",
@@ -56,74 +63,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
-    "# gradient boosting for classification in scikit-learn\n",
-    "from numpy import mean\n",
-    "from numpy import std\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold"
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from lightgbm import LGBMClassifier\n",
+    "from catboost import CatBoostClassifier\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "\n",
     "base = DecisionTreeClassifier(criterion='entropy', \n",
     "                              max_depth=1,\n",
     "                              random_state=1)\n",
+    "ada = AdaBoostClassifier(base_estimator=base,\n",
+    "                         n_estimators=100, \n",
+    "                         learning_rate=0.1,\n",
+    "                         random_state=1)\n",
     "\n",
-    "#clf = GradientBoostingClassifier()\n",
-    "clf = XGBClassifier(use_label_encoder=False)\n",
+    "gbm = GradientBoostingClassifier()\n",
+    "xgb = XGBClassifier(eval_metric=\"logloss\", use_label_encoder=False)\n",
+    "lgb = LGBMClassifier()\n",
+    "cat = CatBoostClassifier(verbose=0, n_estimators=100)\n",
     "\n",
-    "clf.fit(X_train, y_train)\n",
-    "\n",
-    "y_train_pred = clf.predict(X_train)\n",
-    "\n",
-    "y_test_pred = clf.predict(X_test)\n",
-    "\n"
+    "classifiers = [\n",
+    "    {'name':'Adaboost','clf':ada},\n",
+    "    {'name':'Gradient Boost','clf':gbm},\n",
+    "    {'name':'XGBoost','clf':xgb},\n",
+    "    {'name':'Light GBM','clf':lgb},\n",
+    "    {'name':'CatBoost','clf':cat}\n",
+    "    ]"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[11:01:20] WARNING: /tmp/build/80754af9/xgboost-split_1619724447847/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "source": [
-    "df2 = pd.DataFrame()\n",
+    "dfTemp = pd.DataFrame()\n",
     "\n",
-    "names = ['ada (train)', 'ada (test)']\n",
-    "y_trues = [y_train, y_test]\n",
-    "y_preds = [y_train_pred, y_test_pred]\n",
+    "for classifier in classifiers:\n",
+    "    name = classifier['name']\n",
+    "    clf = classifier['clf']\n",
     "\n",
-    "for y_true, y_pred, name in zip(y_trues, y_preds, names):\n",
+    "    scores = cross_validate(estimator=clf,\n",
+    "                            X=X_train,\n",
+    "                            y=y_train,\n",
+    "                            cv=10,\n",
+    "                            scoring=['accuracy','precision','recall','f1'],\n",
+    "                            n_jobs=-1)\n",
     "\n",
-    "    ACC, PRE, REC, F1 = calc_score(y_true, y_pred)\n",
-    "    data = {'clf': name,\n",
-    "            'ACC': f\"{ACC:6.3f}\" ,\n",
-    "            'PRE': f\"{PRE:6.3f}\" ,\n",
-    "            'REC': f\"{REC:6.3f}\" ,\n",
-    "            'F1': f\"{F1:6.3f}\"}\n",
-    "    df2 = df2.append(data, ignore_index=True)\n",
-    "    \n",
-    "df2 = df2.set_index([\"clf\"])\n",
-    "display(df2)"
+    "    scoreTypes = ['test_accuracy','test_precision','test_recall','test_f1']    \n",
+    "    data = {}\n",
+    "    for scoreType in scoreTypes:\n",
+    "        scoreArray = scores[scoreType]\n",
+    "        scoreMean = np.mean(scoreArray)\n",
+    "        data['clf'] = name\n",
+    "        data[scoreType] = f\"{scoreMean:6.3f}\"\n",
+    "    dfTemp = dfTemp.append(data, ignore_index=True)\n",
+    "\n",
+    "display(dfTemp)"
    ],
    "outputs": [
     {
@@ -148,48 +154,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ACC</th>\n",
-       "      <th>F1</th>\n",
-       "      <th>PRE</th>\n",
-       "      <th>REC</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>clf</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>test_f1</th>\n",
+       "      <th>test_precision</th>\n",
+       "      <th>test_recall</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>ada (train)</th>\n",
-       "      <td>0.974</td>\n",
-       "      <td>0.976</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.953</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Adaboost</td>\n",
+       "      <td>0.861</td>\n",
+       "      <td>0.873</td>\n",
+       "      <td>0.882</td>\n",
+       "      <td>0.885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ada (test)</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Gradient Boost</td>\n",
+       "      <td>0.861</td>\n",
+       "      <td>0.873</td>\n",
+       "      <td>0.877</td>\n",
+       "      <td>0.885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XGBoost</td>\n",
+       "      <td>0.911</td>\n",
+       "      <td>0.913</td>\n",
+       "      <td>0.930</td>\n",
+       "      <td>0.905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Light GBM</td>\n",
+       "      <td>0.898</td>\n",
        "      <td>0.904</td>\n",
-       "      <td>0.906</td>\n",
-       "      <td>0.960</td>\n",
-       "      <td>0.857</td>\n",
+       "      <td>0.922</td>\n",
+       "      <td>0.905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CatBoost</td>\n",
+       "      <td>0.911</td>\n",
+       "      <td>0.913</td>\n",
+       "      <td>0.950</td>\n",
+       "      <td>0.885</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                ACC      F1     PRE     REC\n",
-       "clf                                        \n",
-       "ada (train)   0.974   0.976   1.000   0.953\n",
-       "ada (test)    0.904   0.906   0.960   0.857"
+       "              clf test_accuracy test_f1 test_precision test_recall\n",
+       "0        Adaboost         0.861   0.873          0.882       0.885\n",
+       "1  Gradient Boost         0.861   0.873          0.877       0.885\n",
+       "2         XGBoost         0.911   0.913          0.930       0.905\n",
+       "3       Light GBM         0.898   0.904          0.922       0.905\n",
+       "4        CatBoost         0.911   0.913          0.950       0.885"
       ]
      },
      "metadata": {}
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "clf.fit(X_train, y_train)\n",
+    "y_train_pred = clf.predict(X_train)\n",
+    "y_test_pred = clf.predict(X_test)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "df2 = pd.DataFrame()\n",
+    "\n",
+    "names = ['ada (train)', 'ada (test)']\n",
+    "y_trues = [y_train, y_test]\n",
+    "y_preds = [y_train_pred, y_test_pred]\n",
+    "\n",
+    "for y_true, y_pred, name in zip(y_trues, y_preds, names):\n",
+    "\n",
+    "    ACC, PRE, REC, F1 = calc_score(y_true, y_pred)\n",
+    "    data = {'clf': name,\n",
+    "            'ACC': f\"{ACC:6.3f}\" ,\n",
+    "            'PRE': f\"{PRE:6.3f}\" ,\n",
+    "            'REC': f\"{REC:6.3f}\" ,\n",
+    "            'F1': f\"{F1:6.3f}\"}\n",
+    "    df2 = df2.append(data, ignore_index=True)\n",
+    "    \n",
+    "df2 = df2.set_index([\"clf\"])\n",
+    "display(df2)"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
