--- a/Topic 06 - Ensemble Learning/T1 - Gradient Boost.ipynb
+++ b/Topic 06 - Ensemble Learning/T1 - Gradient Boost.ipynb
@@ -11,34 +11,34 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.datasets import load_wine\n",
-    "from sklearn.model_selection import cross_validate\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "#Load data\n",
-    "dataObj = load_wine()\n",
-    "X = dataObj.data\n",
-    "y = dataObj.target\n",
-    "\n",
-    "# Create DataFrame with features\n",
-    "dfori = pd.DataFrame(X)\n",
-    "dfori.columns = dataObj.feature_names\n",
-    "\n",
-    "# Add class column\n",
-    "dfori.insert(loc=0, column=\"Class\", value=y)\n",
-    "\n",
-    "#Filter class 0 and 1\n",
-    "filt = (dfori['Class'] == 0) | (dfori['Class'] == 1)\n",
-    "df = dfori.loc[filt]\n",
-    "\n",
-    "# Extract two features \n",
-    "X = df[['alcohol','malic_acid']].values\n",
-    "y = df['Class'].values\n",
-    "\n",
-    "# Split data\n",
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.datasets import load_wine\r\n",
+    "from sklearn.model_selection import cross_validate\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "\r\n",
+    "#Load data\r\n",
+    "dataObj = load_wine()\r\n",
+    "X = dataObj.data\r\n",
+    "y = dataObj.target\r\n",
+    "\r\n",
+    "# Create DataFrame with features\r\n",
+    "dfori = pd.DataFrame(X)\r\n",
+    "dfori.columns = dataObj.feature_names\r\n",
+    "\r\n",
+    "# Add class column\r\n",
+    "dfori.insert(loc=0, column=\"Class\", value=y)\r\n",
+    "\r\n",
+    "#Filter class 0 and 1\r\n",
+    "filt = (dfori['Class'] == 0) | (dfori['Class'] == 1)\r\n",
+    "df = dfori.loc[filt]\r\n",
+    "\r\n",
+    "# Extract two features \r\n",
+    "X = df[['alcohol','malic_acid']].values\r\n",
+    "y = df['Class'].values\r\n",
+    "\r\n",
+    "# Split data\r\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=1, stratify=y)"
    ],
    "outputs": [],
@@ -48,14 +48,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "from sklearn.metrics import accuracy_score, precision_score ,recall_score, f1_score\n",
-    "\n",
-    "def calc_score(y_true, y_pred):\n",
-    "    ACC = accuracy_score(y_true=y_true, y_pred=y_pred)\n",
-    "    PRE = precision_score(y_true=y_true, y_pred=y_pred, zero_division=1)\n",
-    "    REC = recall_score(y_true=y_true, y_pred=y_pred, zero_division=1)\n",
-    "    F1 = f1_score(y_true=y_true, y_pred=y_pred, zero_division=1)\n",
-    "    # print(f\"ACC:{ACC:6.3f} PRE:{PRE:6.3f} REC:{REC:6.3f} F1:{REC:6.3f}\")\n",
+    "from sklearn.metrics import accuracy_score, precision_score ,recall_score, f1_score\r\n",
+    "\r\n",
+    "def calc_score(y_true, y_pred):\r\n",
+    "    ACC = accuracy_score(y_true=y_true, y_pred=y_pred)\r\n",
+    "    PRE = precision_score(y_true=y_true, y_pred=y_pred, zero_division=1)\r\n",
+    "    REC = recall_score(y_true=y_true, y_pred=y_pred, zero_division=1)\r\n",
+    "    F1 = f1_score(y_true=y_true, y_pred=y_pred, zero_division=1)\r\n",
+    "    # print(f\"ACC:{ACC:6.3f} PRE:{PRE:6.3f} REC:{REC:6.3f} F1:{REC:6.3f}\")\r\n",
     "    return (ACC, PRE, REC, F1)"
    ],
    "outputs": [],
@@ -65,12 +65,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "from lightgbm import LGBMClassifier\n",
-    "from catboost import CatBoostClassifier\n"
+    "from sklearn.tree import DecisionTreeClassifier\r\n",
+    "from sklearn.ensemble import AdaBoostClassifier\r\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\r\n",
+    "from xgboost import XGBClassifier\r\n",
+    "from lightgbm import LGBMClassifier\r\n",
+    "from catboost import CatBoostClassifier\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -79,25 +79,25 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "base = DecisionTreeClassifier(criterion='entropy', \n",
-    "                              max_depth=1,\n",
-    "                              random_state=1)\n",
-    "ada = AdaBoostClassifier(base_estimator=base,\n",
-    "                         n_estimators=100, \n",
-    "                         learning_rate=0.1,\n",
-    "                         random_state=1)\n",
-    "\n",
-    "gbm = GradientBoostingClassifier()\n",
-    "xgb = XGBClassifier(eval_metric=\"logloss\", use_label_encoder=False)\n",
-    "lgb = LGBMClassifier()\n",
-    "cat = CatBoostClassifier(verbose=0, n_estimators=100)\n",
-    "\n",
-    "classifiers = [\n",
-    "    {'name':'Adaboost','clf':ada},\n",
-    "    {'name':'Gradient Boost','clf':gbm},\n",
-    "    {'name':'XGBoost','clf':xgb},\n",
-    "    {'name':'Light GBM','clf':lgb},\n",
-    "    {'name':'CatBoost','clf':cat}\n",
+    "base = DecisionTreeClassifier(criterion='entropy', \r\n",
+    "                              max_depth=1,\r\n",
+    "                              random_state=1)\r\n",
+    "ada = AdaBoostClassifier(base_estimator=base,\r\n",
+    "                         n_estimators=100, \r\n",
+    "                         learning_rate=0.1,\r\n",
+    "                         random_state=1)\r\n",
+    "\r\n",
+    "gbm = GradientBoostingClassifier()\r\n",
+    "xgb = XGBClassifier(eval_metric=\"logloss\", use_label_encoder=False)\r\n",
+    "lgb = LGBMClassifier()\r\n",
+    "cat = CatBoostClassifier(verbose=0, n_estimators=100)\r\n",
+    "\r\n",
+    "classifiers = [\r\n",
+    "    {'name':'Adaboost','clf':ada},\r\n",
+    "    {'name':'Gradient Boost','clf':gbm},\r\n",
+    "    {'name':'XGBoost','clf':xgb},\r\n",
+    "    {'name':'Light GBM','clf':lgb},\r\n",
+    "    {'name':'CatBoost','clf':cat}\r\n",
     "    ]"
    ],
    "outputs": [],
@@ -107,28 +107,28 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "dfTemp = pd.DataFrame()\n",
-    "\n",
-    "for classifier in classifiers:\n",
-    "    name = classifier['name']\n",
-    "    clf = classifier['clf']\n",
-    "\n",
-    "    scores = cross_validate(estimator=clf,\n",
-    "                            X=X_train,\n",
-    "                            y=y_train,\n",
-    "                            cv=10,\n",
-    "                            scoring=['accuracy','precision','recall','f1'],\n",
-    "                            n_jobs=-1)\n",
-    "\n",
-    "    scoreTypes = ['test_accuracy','test_precision','test_recall','test_f1']    \n",
-    "    data = {}\n",
-    "    for scoreType in scoreTypes:\n",
-    "        scoreArray = scores[scoreType]\n",
-    "        scoreMean = np.mean(scoreArray)\n",
-    "        data['clf'] = name\n",
-    "        data[scoreType] = f\"{scoreMean:6.3f}\"\n",
-    "    dfTemp = dfTemp.append(data, ignore_index=True)\n",
-    "\n",
+    "dfTemp = pd.DataFrame()\r\n",
+    "\r\n",
+    "for classifier in classifiers:\r\n",
+    "    name = classifier['name']\r\n",
+    "    clf = classifier['clf']\r\n",
+    "\r\n",
+    "    scores = cross_validate(estimator=clf,\r\n",
+    "                            X=X_train,\r\n",
+    "                            y=y_train,\r\n",
+    "                            cv=10,\r\n",
+    "                            scoring=['accuracy','precision','recall','f1'],\r\n",
+    "                            n_jobs=-1)\r\n",
+    "\r\n",
+    "    scoreTypes = ['test_accuracy','test_precision','test_recall','test_f1']    \r\n",
+    "    data = {}\r\n",
+    "    for scoreType in scoreTypes:\r\n",
+    "        scoreArray = scores[scoreType]\r\n",
+    "        scoreMean = np.mean(scoreArray)\r\n",
+    "        data['clf'] = name\r\n",
+    "        data[scoreType] = f\"{scoreMean:6.3f}\"\r\n",
+    "    dfTemp = dfTemp.append(data, ignore_index=True)\r\n",
+    "\r\n",
     "display(dfTemp)"
    ],
    "outputs": [
@@ -224,8 +224,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "clf.fit(X_train, y_train)\n",
-    "y_train_pred = clf.predict(X_train)\n",
+    "clf.fit(X_train, y_train)\r\n",
+    "y_train_pred = clf.predict(X_train)\r\n",
     "y_test_pred = clf.predict(X_test)"
    ],
    "outputs": [],
@@ -235,23 +235,23 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "df2 = pd.DataFrame()\n",
-    "\n",
-    "names = ['ada (train)', 'ada (test)']\n",
-    "y_trues = [y_train, y_test]\n",
-    "y_preds = [y_train_pred, y_test_pred]\n",
-    "\n",
-    "for y_true, y_pred, name in zip(y_trues, y_preds, names):\n",
-    "\n",
-    "    ACC, PRE, REC, F1 = calc_score(y_true, y_pred)\n",
-    "    data = {'clf': name,\n",
-    "            'ACC': f\"{ACC:6.3f}\" ,\n",
-    "            'PRE': f\"{PRE:6.3f}\" ,\n",
-    "            'REC': f\"{REC:6.3f}\" ,\n",
-    "            'F1': f\"{F1:6.3f}\"}\n",
-    "    df2 = df2.append(data, ignore_index=True)\n",
-    "    \n",
-    "df2 = df2.set_index([\"clf\"])\n",
+    "df2 = pd.DataFrame()\r\n",
+    "\r\n",
+    "names = ['ada (train)', 'ada (test)']\r\n",
+    "y_trues = [y_train, y_test]\r\n",
+    "y_preds = [y_train_pred, y_test_pred]\r\n",
+    "\r\n",
+    "for y_true, y_pred, name in zip(y_trues, y_preds, names):\r\n",
+    "\r\n",
+    "    ACC, PRE, REC, F1 = calc_score(y_true, y_pred)\r\n",
+    "    data = {'clf': name,\r\n",
+    "            'ACC': f\"{ACC:6.3f}\" ,\r\n",
+    "            'PRE': f\"{PRE:6.3f}\" ,\r\n",
+    "            'REC': f\"{REC:6.3f}\" ,\r\n",
+    "            'F1': f\"{F1:6.3f}\"}\r\n",
+    "    df2 = df2.append(data, ignore_index=True)\r\n",
+    "    \r\n",
+    "df2 = df2.set_index([\"clf\"])\r\n",
     "display(df2)"
    ],
    "outputs": [],
