--- a/Topic 06 - Ensemble Learning/C11 - Voting Classifier.ipynb
+++ b/Topic 06 - Ensemble Learning/C11 - Voting Classifier.ipynb
@@ -34,9 +34,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Setting up\n",
-    "- Iris data\n",
-    "- Binary classification\n",
+    "## Setting up\r\n",
+    "- Iris data\r\n",
+    "- Binary classification\r\n",
     "- 2 features"
    ],
    "metadata": {}
