--- a/Topic 06 - Ensemble Learning/C32 - GBM Libraries.ipynb
+++ b/Topic 06 - Ensemble Learning/C32 - GBM Libraries.ipynb
@@ -212,14 +212,7 @@
     "    toc = time.perf_counter()\r\n",
     "    ep_time = toc - tic\r\n",
     "    print(f'Calculating {name}, Elapse Time: {ep_time:0.4f} seconds')\r\n",
-    "    df_all.append(df_out)\r\n",
-    "\r\n",
-    "# df_tree = calculate_scores(tree, 'Tree', data)\r\n",
-    "# df_ada = calculate_scores(ada, 'Ada', data)\r\n",
-    "# df_gbm = calculate_scores(ada, 'Gbm', data)\r\n",
-    "# df_xgb = calculate_scores(xgb, 'XGB', data)\r\n",
-    "# df_lgbm = calculate_scores(lgb, 'LGBM', data)\r\n",
-    "# df_cat = calculate_scores(cat, 'Cat', data)"
+    "    df_all.append(df_out)"
    ],
    "outputs": [
     {
