--- a/Topic 06 - Ensemble Learning/C12 - Bagging.ipynb
+++ b/Topic 06 - Ensemble Learning/C12 - Bagging.ipynb
@@ -34,10 +34,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Setting up\n",
-    "\n",
-    "- Wine data\n",
-    "- Binary classification (filter class 0 and 1)\n",
+    "## Setting up\r\n",
+    "\r\n",
+    "- Wine data\r\n",
+    "- Binary classification (filter class 0 and 1)\r\n",
     "- 2 features ('alcohol','malic_acid')"
    ],
    "metadata": {}
@@ -534,7 +534,7 @@
     "                        max_features=1.0, #Use the same number of features as the original data.\r\n",
     "                        bootstrap=True, #Sample are drawn with replacement.\r\n",
     "                        bootstrap_features=False, #Feature are drawn without replcaement.\r\n",
-    "                        n_jobs=1, \r\n",
+    "                        n_jobs=-1, \r\n",
     "                        random_state=1)"
    ],
    "outputs": [],
