--- a/Topic 06 - Ensemble Learning/C21 - Adaboost.ipynb
+++ b/Topic 06 - Ensemble Learning/C21 - Adaboost.ipynb
@@ -34,10 +34,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Setting up\n",
-    "\n",
-    "- Wine data\n",
-    "- Binary classification (filter class 0 and 1)\n",
+    "## Setting up\r\n",
+    "\r\n",
+    "- Wine data\r\n",
+    "- Binary classification (filter class 0 and 1)\r\n",
     "- 2 features ('alcohol','malic_acid')"
    ],
    "metadata": {}
@@ -250,7 +250,7 @@
     "\r\n",
     "ada = AdaBoostClassifier(base_estimator=base,\r\n",
     "                         n_estimators=500, \r\n",
-    "                         learning_rate=0.1,\r\n",
+    "                         learning_rate=1,\r\n",
     "                         random_state=1)"
    ],
    "outputs": [],
