--- a/Topic 06 - Ensemble Learning/C31 - Gradient Boosting.ipynb
+++ b/Topic 06 - Ensemble Learning/C31 - Gradient Boosting.ipynb
@@ -34,10 +34,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Setting up\n",
-    "\n",
-    "- Wine data\n",
-    "- Binary classification (filter class 0 and 1)\n",
+    "## Setting up\r\n",
+    "\r\n",
+    "- Wine data\r\n",
+    "- Binary classification (filter class 0 and 1)\r\n",
     "- 2 features ('alcohol','malic_acid')"
    ],
    "metadata": {}
