--- a/Topic 07 - ANN/S4 - ANN Lecture - Verify.ipynb
+++ b/Topic 07 - ANN/S4 - ANN Lecture - Verify.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "source": [
     "import os, time\r\n",
     "import tensorflow as tf\r\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "source": [
     "X = np.array([[1]])\r\n",
     "y = np.array([10])\r\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "source": [
     "tf.keras.backend.clear_session()\r\n",
     "\r\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "source": [
     "model.summary()"
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "source": [
     "model.trainable_variables"
    ],
@@ -110,14 +110,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 73
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "source": [
     "y_pred = model(X).numpy()\r\n",
     "print(y_pred)"
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "source": [
     "model.compile(\r\n",
     "        optimizer=tf.optimizers.Adam(learning_rate=0.1),\r\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "source": [
     "history = model.fit(X,y, epochs=1)"
    ],
@@ -155,7 +155,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1/1 [==============================] - 0s 1ms/step - loss: 2.2544 - mean_absolute_percentage_error: 22.5440\n"
+      "1/1 [==============================] - 0s 2ms/step - loss: 2.2544 - mean_absolute_percentage_error: 22.5440\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "source": [
     "model.trainable_weights"
    ],
@@ -183,14 +183,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "source": [
     "y_pred = model(X).numpy()\r\n",
     "print(y_pred)"
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "source": [
     "def sigmoid(x):\r\n",
     "    return 1/(1 + np.exp(-x))"
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "source": [
     "phi_h = sigmoid(1)\r\n",
     "print(phi_h)"
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "source": [
     "z_h_1 = phi_h*2\r\n",
     "z_h_2 = phi_h*3"
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "source": [
     "phi_out_1 = sigmoid(z_h_1)\r\n",
     "phi_out_2 = sigmoid(z_h_2)\r\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "source": [
     "y_hat = phi_out_1*4 + phi_out_2*5\r\n",
     "print(y_hat)"
@@ -277,6 +277,66 @@
      "text": [
       "7.745600167950341\n"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "tf.keras.metrics.mean_squared_error(\r\n",
+    "    y, y_hat\r\n",
+    ")"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float64, numpy=5.08231860274553>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "source": [
+    "np.power(y_hat-y,2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([5.0823186])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([10])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
     }
    ],
    "metadata": {}
