--- a/Topic 07 - ANN/S4 - ANN Lecture - Verify.ipynb
+++ b/Topic 07 - ANN/S4 - ANN Lecture - Verify.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "source": [
     "import os, time\r\n",
     "import tensorflow as tf\r\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "source": [
     "X = np.array([[1]])\r\n",
     "y = np.array([10])\r\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "source": [
     "tf.keras.backend.clear_session()\r\n",
     "\r\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "source": [
     "model.summary()"
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "source": [
     "model.trainable_variables"
    ],
@@ -110,14 +110,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 39
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "source": [
     "y_pred = model(X).numpy()\r\n",
     "print(y_pred)"
@@ -135,27 +135,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "source": [
     "model.compile(\r\n",
-    "        optimizer=tf.optimizers.Adam(learning_rate=0.1),\r\n",
-    "        loss='mean_absolute_error', metrics=['mean_absolute_percentage_error'])\r\n"
+    "        optimizer=tf.optimizers.SGD(learning_rate=0.1, momentum=0.0),\r\n",
+    "        loss='mean_squared_error', metrics=['mean_absolute_percentage_error'])\r\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "source": [
-    "history = model.fit(X,y, epochs=1)"
+    "history = model.fit(X,y, epochs=2)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1/1 [==============================] - 0s 2ms/step - loss: 2.2544 - mean_absolute_percentage_error: 22.5440\n"
+      "Epoch 1/2\n",
+      "1/1 [==============================] - 0s 0s/step - loss: 5.0823 - mean_absolute_percentage_error: 22.5440\n",
+      "Epoch 2/2\n",
+      "1/1 [==============================] - 0s 1ms/step - loss: 0.3519 - mean_absolute_percentage_error: 5.9318\n"
      ]
     }
    ],
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "source": [
     "model.trainable_weights"
    ],
@@ -172,25 +175,25 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<tf.Variable 'dense/kernel:0' shape=(1, 1) dtype=float32, numpy=array([[1.0999994]], dtype=float32)>,\n",
-       " <tf.Variable 'dense/bias:0' shape=(1,) dtype=float32, numpy=array([0.09999938], dtype=float32)>,\n",
-       " <tf.Variable 'dense_1/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[2.0999992, 3.099999 ]], dtype=float32)>,\n",
-       " <tf.Variable 'dense_1/bias:0' shape=(2,) dtype=float32, numpy=array([0.09999948, 0.09999929], dtype=float32)>,\n",
+       "[<tf.Variable 'dense/kernel:0' shape=(1, 1) dtype=float32, numpy=array([[1.263263]], dtype=float32)>,\n",
+       " <tf.Variable 'dense/bias:0' shape=(1,) dtype=float32, numpy=array([0.26326293], dtype=float32)>,\n",
+       " <tf.Variable 'dense_1/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[2.2434843, 3.1779945]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_1/bias:0' shape=(2,) dtype=float32, numpy=array([0.32737896, 0.23953818], dtype=float32)>,\n",
        " <tf.Variable 'dense_2/kernel:0' shape=(2, 1) dtype=float32, numpy=\n",
-       " array([[4.0999994],\n",
-       "        [5.0999994]], dtype=float32)>,\n",
-       " <tf.Variable 'dense_2/bias:0' shape=(1,) dtype=float32, numpy=array([0.09999968], dtype=float32)>]"
+       " array([[4.4712853],\n",
+       "        [5.5171843]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_2/bias:0' shape=(1,) dtype=float32, numpy=array([0.569516], dtype=float32)>]"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 43
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "source": [
     "y_pred = model(X).numpy()\r\n",
     "print(y_pred)"
@@ -200,7 +203,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[8.280891]]\n"
+      "[[9.79833]]\n"
      ]
     }
    ],
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "source": [
     "def sigmoid(x):\r\n",
     "    return 1/(1 + np.exp(-x))"
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "source": [
     "phi_h = sigmoid(1)\r\n",
     "print(phi_h)"
@@ -236,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "source": [
     "z_h_1 = phi_h*2\r\n",
     "z_h_2 = phi_h*3"
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "source": [
     "phi_out_1 = sigmoid(z_h_1)\r\n",
     "phi_out_2 = sigmoid(z_h_2)\r\n",
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "source": [
     "y_hat = phi_out_1*4 + phi_out_2*5\r\n",
     "print(y_hat)"
@@ -283,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "source": [
     "tf.keras.metrics.mean_squared_error(\r\n",
     "    y, y_hat\r\n",
@@ -298,14 +301,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 50
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "source": [
     "np.power(y_hat-y,2)"
    ],
@@ -318,25 +321,94 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 51
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "source": [],
+   "execution_count": 52,
+   "source": [
+    "g = ((y_hat-y)*2)[0]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "source": [
+    "print(g*4)\r\n",
+    "(print(g*5))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "-18.03519865639727\n",
+      "-22.543998320496588\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "source": [
+    "print(g*0.811)\r\n",
+    "print(g*0.899)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "-3.656636527584547\n",
+      "-4.0534108980252865\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "source": [
+    "4-(0.1*-0.914)"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([10])"
+       "4.0914"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 55
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "source": [
+    "5-(0.1*-1.013)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5.1013"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
     }
    ],
    "metadata": {}
@@ -353,7 +425,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.11",
+   "version": "3.8.0",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -365,7 +437,7 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('tf': conda)"
+   "display_name": "Python 3.8.0 64-bit ('tf': conda)"
   },
   "interpreter": {
    "hash": "b4a387497f54fd22d04ab06f3cac2b317ccdf5aa3fbc31422dd91bb954740c85"
